common/force-app/main/default/objects/Transaction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>This field outlines what kind of transaction has occurred</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Investment_Category</valueSetName>
    </valueSet>
</CustomField>