common/force-app/main/default/objects/Transaction__c/fields/Investee_Entity__c.field-meta.xml
<CustomField>
    <fullName>Investee_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investee Entity</label>
    <referenceTo>Investee_Entity__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>