common/force-app/main/default/objects/Transaction__c/fields/Investment_MOP__c.field-meta.xml
<CustomField>
    <fullName>Investment_MOP__c</fullName>
    <label>Investment MOP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>