common/force-app/main/default/objects/Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>This field determines if it is an Invoice or a Bill transaction</description>
    <inlineHelpText>Invoice is something that has been paid to.
Bill is something that needs to be paid</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Bill</fullName>
            </value>
            <value>
                <fullName>Bank Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>