common/force-app/main/default/objects/Transaction__c/fields/VC_Entity__c.field-meta.xml
<CustomField>
    <fullName>VC_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What VC Entity does this Transaction relate to?</inlineHelpText>
    <label>VC Entity</label>
    <referenceTo>VC_Entity__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>