common/force-app/main/default/objects/Transaction__c/fields/View_Xero_Transaction__c.field-meta.xml
<CustomField>
    <fullName>View_Xero_Transaction__c</fullName>
    <description>Depending on the Picklist value of transaction type (Invoice/Bill) create a hyperlink to Xero</description>
    <formula>IF(
    Text(Transaction_Type__c) = &quot;Bill&quot;,
    HYPERLINK(&quot;https://go.xero.com/AccountsPayable/View.aspx?InvoiceID=&quot; &amp; Xero_ID_of_Transaction__c, &quot;View Bill&quot;),
    HYPERLINK(&quot;https://go.xero.com/app/!35Rxq/invoicing/view/&quot; &amp; Xero_ID_of_Transaction__c, &quot;View Invoice&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Depending on the Picklist value of transaction type (Invoice/Bill) create a hyperlink to Xero</inlineHelpText>
    <label>View Xero Transaction</label>
    <type>Text</type>
</CustomField>