common/force-app/main/default/objects/Transaction__c/fields/Xero_ID_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Xero_ID_of_Transaction__c</fullName>
    <label>Xero ID of Transaction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>