common/force-app/main/default/objects/Transaction__c/fields/XI__c.field-meta.xml
<CustomField>
    <fullName>XI__c</fullName>
    <description>It potentially has the info for the transaction category AND might have the Account Code As Well</description>
    <inlineHelpText>It potentially has the info for the transaction category AND might have the Account Code As Well</inlineHelpText>
    <label>XI Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>