common/force-app/main/default/objects/Transaction__c/fields/XI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>XI_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>