common/force-app/main/default/objects/Transaction__c/fields/XI_From_Name__c.field-meta.xml
<CustomField>
    <fullName>XI_From_Name__c</fullName>
    <label>Xero Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>