common/force-app/main/default/objects/Transaction__c/fields/XI_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>XI_Invoice_Number__c</fullName>
    <label>XI Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>