common/force-app/main/default/objects/Transaction__c/fields/XI_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>XI_Issue_Date__c</fullName>
    <label>Issue Date</label>
    <type>DateTime</type>
</CustomField>