common/force-app/main/default/objects/Transaction__c/fields/XI_Line_item_amount__c.field-meta.xml
<CustomField>
    <fullName>XI_Line_item_amount__c</fullName>
    <label>XI Line item amount</label>
    <length>200</length>
    <type>Text</type>
</CustomField>