common/force-app/main/default/objects/Transaction__c/fields/XI_Line_Items_Description__c.field-meta.xml
<CustomField>
    <fullName>XI_Line_Items_Description__c</fullName>
    <label>XI Line Items Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>