common/force-app/main/default/objects/Transaction__c/fields/XI_Reference__c.field-meta.xml
<CustomField>
    <fullName>XI_Reference__c</fullName>
    <label>XI Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>