common/force-app/main/default/objects/Transaction__c/fields/XI_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>XI_Tax_Rate__c</fullName>
    <label>XI Tax Rate</label>
    <length>120</length>
    <type>Text</type>
</CustomField>