common/force-app/main/default/objects/Transaction__c/fields/XI_Type__c.field-meta.xml
<CustomField>
    <fullName>XI_Type__c</fullName>
    <label>XI Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>